--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
         "uglify-js": "2.4.x",
         "requirejs": "2.1.x",
         "almond": "0.3.x",
-        "yuidocjs": "0.8.x",
+        "yuidocjs": "jsxgraph/yuidoc#jsxgraph",
         "jshint": "2.7.x",
         "jslint": "0.9.x",
         "jstestdriver": "1.0.x",
